--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -16,7 +16,7 @@ body {
 .words-container-skeleton {
   top: var(--top-boundary);
   width: var(--words-container-width);
-  left: 45%;
+  left: var(--words-container-left);
   margin-left: calc(0px - var(--words-container-width) / 2);
   position: relative;
 }
@@ -24,8 +24,7 @@ body {
 .operations,
 .operations-container-skeleton {
   top: var(--top-boundary);
-  left: calc(45% + var(--words-container-width) / 2);
-  margin-left: 24px;
+  left: calc(var(--words-container-left) + var(--words-container-width) / 2 + 36px);
   display: flex;
   flex-direction: column;
   align-items: flex-start;
