--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,4 +1,10 @@
+html {
+	overflow-x: hidden;
+  overflow-y: auto;
+}
+
 body {
+  overflow: hidden;
   --top-boundary: 60px;
   --words-container-width: 520px;
   --words-container-left: 45%;
