--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -36,6 +36,11 @@ body[arco-theme="dark"] {
   position: fixed;
 }
 
+.operations .arco-progress-circle-wrapper {
+  width: 32px !important;
+  height: 32px !important;
+}
+
 .operations > *,
 .operations-container-skeleton > * {
   margin-top: 12px;
@@ -44,6 +49,10 @@ body[arco-theme="dark"] {
 .operations .arco-btn,
 .word-item .arco-input-append .arco-btn {
   font-size: 16px !important;
+}
+
+.operations .arco-upload-wrapper {
+  width: 32px;
 }
 
 .operations-container-skeleton .translater-skeleton {
